commit to update the logo

--- a/services.html
+++ b/services.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Twenty Kiwi</a>
+    <div class="nav-wrapper container">
+      <img class="logo" src="assets/logo12.png" alt="#">
+      <a id="logo-container" href="#" class="brand-logo">Twenty Kiwi</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
@@ -49,6 +51,36 @@
 
   <div class="container">
     <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Game Development</h5>
+            <img src="assets/game_dev.jpg" alt="#">
+            <p class="light">TwentyKiwi is creating a range of cross platform games  for mobile, web and desktop. We offer end-to-end solutions for those looking to hire game development companies experienced in LibGDX and Android SDK.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">Application Development</h5>
+
+            <p class="light">Our App developers have expertise in developing apps for iPhone and Android. Hire our team of most cost effective developers that has been developed top class Apps. You can hire our developers as full time, part time and at fixed cost to achieve sustainable growth for your organization.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Vlogging</h5>
+
+            <p class="light">TwentyKiwi Video Editing Services can give an extra dimension to your Videos through its Professional  Video Editing Services. Here we provide Cost-effective video editing services, Better Understanding of the customers need, Delivery of the finished product within the stipulated time frame, High quality work.</p>
+          </div>
+        </div>
+      </div>
 
       <!--   Icon Section   -->
       <div class="row">
