--- a/careers.html
+++ b/careers.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Twenty Kiwi</a>
+    <div class="nav-wrapper container">
+      <img class="logo" src="assets/logo12.png" alt="img">
+      <a id="logo-container" href="#" class="brand-logo">Twenty Kiwi</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
