commit to add more layout

--- a/careers.html
+++ b/careers.html
@@ -38,7 +38,7 @@
       <br><br>
       <h1 class="header center orange-text">Careers</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive mobile application and game development</h5>
+        <h5 class="header col s12 light">Join us for an exciting career.</h5>
       </div>
       <div class="row center">
         <a href="services.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
