--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -58,7 +58,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Follow modern AGILE approach</h5>
-
+            <img src="assets/agile_dev.png" alt="#">
             <p class="light">We believe that a good solution is all about understanding the requirement, quick turnaround on projects and keeping you (the customer) involved throughout.
 
             We add a number of enhancements around defining the requirements to enable us to offer a fixed price on the whole project.</p>
@@ -69,7 +69,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Application Development Process</h5>
-
+            <img src="assets/app_dev1.png" alt="#">
             <p class="light">As soon as you come to us with your business problem, we work with you to develop the requirement into a solution that works.
             Know what you want but find it hard to describe?
             Sometimes even describing what you want is difficult. Don’t worry, we understand business challenges.In that situation, we have a quick tool that can help you to work through your ideas and point us in the right direction.</p>
@@ -80,10 +80,40 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Brainstorming with development requirements</h5>
-
+            <img src="assets/brainstorming.png" alt="">
             <p class="light">We always kick our projects off with an initial discussion or a face-to-face   meeting.
             Where there is a large scope or the business rules are complex, a day in a conference room for a brainstorming and white boarding session always works to iron out the details and help us get a solid understanding of what you’re looking for.
             Once we have an idea of the project outline, we will put together a ball-park cost for you.</p>
+          </div>
+        </div>
+      </div>
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Speeds up development</h5>
+            <img src="assets/agile2.png" alt="#">
+            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">User Experience Focused</h5>
+            <img src="assets/meeples_groups.png" alt="#">
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Easy to work with</h5>
+            <img src="assets/handshake-flat.png" alt="">
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
           </div>
         </div>
       </div>
