--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/services.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -38,7 +38,7 @@
       <br><br>
       <h1 class="header center orange-text">Services</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive Mobile application and Game development</h5>
+        <h5 class="header col s12 light">We do things which effects peoples!</h5>
       </div>
       <div class="row center">
         <a href="services.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
@@ -58,7 +58,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Game Development</h5>
-            <img src="assets/game_dev.jpg" alt="#">
+            <img src="assets/game_dev.png" alt="#">
             <p class="light">TwentyKiwi is creating a range of cross platform games  for mobile, web and desktop. We offer end-to-end solutions for those looking to hire game development companies experienced in LibGDX and Android SDK.</p>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Application Development</h5>
-
+            <img src="assets/app_dev1.png" alt="">
             <p class="light">Our App developers have expertise in developing apps for iPhone and Android. Hire our team of most cost effective developers that has been developed top class Apps. You can hire our developers as full time, part time and at fixed cost to achieve sustainable growth for your organization.</p>
           </div>
         </div>
@@ -76,37 +76,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Vlogging</h5>
-
-            <p class="light">TwentyKiwi Video Editing Services can give an extra dimension to your Videos through its Professional  Video Editing Services. Here we provide Cost-effective video editing services, Better Understanding of the customers need, Delivery of the finished product within the stipulated time frame, High quality work.</p>
-          </div>
-        </div>
-      </div>
-
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Game Development</h5>
-
-            <p class="light">TwentyKiwi is creating a range of cross platform games  for mobile, web and desktop. We offer end-to-end solutions for those looking to hire game development companies experienced in LibGDX and Android SDK.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Application Development</h5>
-
-            <p class="light">Our App developers have expertise in developing apps for iPhone and Android. Hire our team of most cost effective developers that has been developed top class Apps. You can hire our developers as full time, part time and at fixed cost to achieve sustainable growth for your organization.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Vlogging</h5>
-
+            <img src="assets/vlog2.png" alt="">
             <p class="light">TwentyKiwi Video Editing Services can give an extra dimension to your Videos through its Professional  Video Editing Services. Here we provide Cost-effective video editing services, Better Understanding of the customers need, Delivery of the finished product within the stipulated time frame, High quality work.</p>
           </div>
         </div>
