commit to add more layout

--- a/about.html
+++ b/about.html
@@ -52,65 +52,80 @@
   <div class="container">
     <div class="section">
 
-      <!--   Icon Section   -->
+      <!--   Our Story Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12 m15">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-            <img src="assets/agile2.png" alt="#">
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
-            <img src="assets/meeples_groups.png" alt="#">
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-            <img src="assets/handshake-flat.png" alt="">
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <h2 class="center light-blue-text"><i class="material-icons">people</i></h2>
+            <h5 class="center">Our Story</h5>
+            <img class="center-img-big" src="assets/our-story.png" alt="#">
+            <p>TwentyKiwi was born out of a collaborative effort between a few friends who are passionate about making and enjoying games or mobile Applications. We frequently work into the darkest hours of the night and/or the wee hours of early morning. Insomnia coupled with a desire to create games we want to play is a major contributor to TwentyKiwi productions.</p>
           </div>
         </div>
       </div>
 
-      <!--   Icon Section   -->
+      <!--   Our Approach Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12 m13">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-            <img src="assets/agile2.png" alt="#">
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
-            <img src="assets/meeples_groups.png" alt="#">
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-            <img src="assets/handshake-flat.png" alt="">
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <h5 class="center">Our Approach</h5>
+            <img class="center-img-big" src="assets/our-approach.png" alt="#">
+            <p>Android  and iOS market is getting big by every single minute. Thus, this industry welcomes every innovative idea. Company owners working hard on the land of inspiring quote, ‘80% of business refers to psychology of the business owner and 20% is the skill set. If you have the psychology, you can get skill set’.</p>
           </div>
         </div>
       </div>
+
+      <!--   Meet the Developer Section   -->
+      <div class="row">
+        <div class="col s12 m14">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Meet the Founders</h5>
+            <img class="center-img-big" src="assets/meet-the-developers.jpg" alt="#">
+            <p>We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
+      </div>
+
+      <!--   Founders Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img class="center-img" src="assets/varun_pic-square.jpg" alt="#">
+            <h5 class="center">Varun Rana</h5>
+            <h6 class="center">Founder & CEO</h6>
+            
+            <p>We believe that a good solution is all about understanding the requirement, quick turnaround on projects and keeping you (the customer) involved throughout.
+
+            We add a number of enhancements around defining the requirements to enable us to offer a fixed price on the whole project.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img class="center-img" src="assets/shiv-square.jpg" alt="#">
+            <h5 class="center">Shiv Kumar</h5>
+            <h6 class="center">Founder & COO</h6>
+            
+            <p>As soon as you come to us with your business problem, we work with you to develop the requirement into a solution that works.
+            Know what you want but find it hard to describe?
+            Sometimes even describing what you want is difficult. Don’t worry, we understand business challenges.In that situation, we have a quick tool that can help you to work through your ideas and point us in the right direction.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img class="center-img" src="assets/brainstorming.png" alt="">
+            <h5 class="center">Rahul Rana</h5>
+            <h6 class="center">Founder & CTO</h6>
+            <p>We always kick our projects off with an initial discussion or a face-to-face   meeting.
+            Where there is a large scope or the business rules are complex, a day in a conference room for a brainstorming and white boarding session always works to iron out the details and help us get a solid understanding of what you’re looking for.
+            Once we have an idea of the project outline, we will put together a ball-park cost for you.</p>
+          </div>
+        </div>
+      </div>
+
 
     </div>
     <br><br>
