--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="section">
 
-      <!--   Icon Section   -->
+      <!--   What we Do Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
