--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Game Development</h5>
-            <img src="assets/game_dev.png" alt="#">
+            <img class="center-img" src="assets/game_dev.png" alt="#">
             <p class="light">TwentyKiwi is creating a range of cross platform games  for mobile, web and desktop. We offer end-to-end solutions for those looking to hire game development companies experienced in LibGDX and Android SDK.</p>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Application Development</h5>
-            <img src="assets/app_dev1.png" alt="">
+            <img class="center-img" src="assets/app_dev1.png" alt="">
             <p class="light">Our App developers have expertise in developing apps for iPhone and Android. Hire our team of most cost effective developers that has been developed top class Apps. You can hire our developers as full time, part time and at fixed cost to achieve sustainable growth for your organization.</p>
           </div>
         </div>
@@ -76,12 +76,67 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Vlogging</h5>
-            <img src="assets/vlog2.png" alt="">
+            <img class="center-img" src="assets/vlog2.png" alt="">
             <p class="light">TwentyKiwi Video Editing Services can give an extra dimension to your Videos through its Professional  Video Editing Services. Here we provide Cost-effective video editing services, Better Understanding of the customers need, Delivery of the finished product within the stipulated time frame, High quality work.</p>
           </div>
         </div>
       </div>
 
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m12">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">The application development process</h5>
+            <img class="center-img-big" src="assets/web-design.png" alt="#">
+            <p>As soon as you come to us with your business problem, we work with you to develop the requirement into a solution that works.</p>
+
+            <p>Know what you want but find it hard to describe?</p>
+
+            <p>Sometimes even describing what you want is difficult. Don’t worry, we understand business challenges.</p>
+
+            <p>In that situation, we have a quick tool that can help you to work through your ideas and point us in the right direction.</p>
+          </div>
+        </div>
+      </div>
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m14">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">We take a modern AGILE approach to application development</h5>
+            <img class="center-img-big" src="assets/agile_dev2.jpg" alt="#">
+            <p>As soon as you come to us with your business problem, we work with you to develop the requirement into a solution that works.</p>
+
+            <p>Know what you want but find it hard to describe?</p>
+
+            <p>Sometimes even describing what you want is difficult. Don’t worry, we understand business challenges.</p>
+
+            <p>In that situation, we have a quick tool that can help you to work through your ideas and point us in the right direction.</p>
+          </div>
+        </div>
+      </div>
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m15">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Brainstorming the application development requirements</h5>
+            <img class="center-img-big" src="assets/brainstorming1.jpg" alt="#">
+            <p>We always kick our projects off with an initial discussion or a face-to-face meeting.</p>
+
+            <p>Where there is a large scope or the business rules are complex, a day in a conference room for a brainstorming and white boarding session always works to iron out the details and help us get a solid understanding of what you’re looking for.</p>
+
+            <p>Once we have an idea of the project outline, we will put together a ball-park cost for you. We understand that everyone is under budget constraints, which is why we present the project outline as a “shopping list,” so you can pick and choose elements.</p>
+
+            <p>Additionally, we can suggest project phases. These phases are designed to get the application developed and into use quickly.</p>
+
+            <p>When deadlines are short and the delivery expectations are high, we are able to assist with a phased approach based on a proven (working) code base.</p>
+          </div>
+        </div>
+      </div>
     </div>
     <br><br>
   </div>
@@ -117,7 +172,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Twenty Kiwi</a>
+      Copyright © 2017 & Made by <a class="orange-text text-lighten-3" href="http://www.twentykiwi.com/">Twenty Kiwi</a>
       </div>
     </div>
   </footer>
