commit to add some more content to front-end

--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Twenty Kiwi</a>
+       © 2017 <a class="orange-text text-lighten-3" href="http://www.twentykiwi.com">Twenty Kiwi</a>, All right reserved
       </div>
     </div>
   </footer>
