--- a/contact.html
+++ b/contact.html
@@ -100,10 +100,8 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Twenty Kiwi</a>
-      </div>
+    <div class="container">
+       © 2017 <a class="orange-text text-lighten-3" href="http://www.twentykiwi.com">Twenty Kiwi</a>, All right reserved
     </div>
   </footer>
 
