--- a/services.html
+++ b/services.html
@@ -172,7 +172,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Copyright © 2017 & Made by <a class="orange-text text-lighten-3" href="http://www.twentykiwi.com/">Twenty Kiwi</a>
+       © 2017 <a class="orange-text text-lighten-3" href="http://www.twentykiwi.com">Twenty Kiwi</a>, All right reserved
       </div>
     </div>
   </footer>
