--- a/careers.html
+++ b/careers.html
@@ -7,7 +7,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/careers.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -52,32 +52,44 @@
   <div class="container">
     <div class="section">
 
-      <!--   Icon Section   -->
+      <!--   Careers Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
+            <img class="center-img-big" src="assets/careers.jpg">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">JOIN US</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-        </div>
+            <p>We have a dynamic culture and a collegial environment where knowledge is shared freely, roles are fluid and rapid adaptation is a reality. With rapid adaptations, come tremendous opportunities to design and develop the best-in-class games or applications for global clients. You are the architect of your own career. At TwentyKiwi, you get to work with smart people on world class games and cutting edge tools. Do you have what it takes to be successful at TwentyKiwi? Join us!</p>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">SEND YOUR RESUME</h6>
+            
+            <p>We are looking for a highly motivated Game/Application Developer that works well in a team oriented environment. If you want to be part of an exciting Mobile gaming/application company, share your resume with us at twentykiwi@gmail.com or call us for more details at 08881118548.</p>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
+            <h5 class="center">TwentyKiwi Game Developer</h6>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <p>If you want to create something which play by millions of User then this is right job for you.</p>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <h5 class="center">Job Description:</h6>
+            <ul>
+              <li>You will be building and releasing games in a live environment with up-to-date features including IAPs (In-App Purchases), social integration, and cross-platform (web and mobile) capabilities.</li>
+              <li>Designing, creating, implementing, debugging, and refining gameplay features</li>
+              <li>Working with other departments—such as art and game design—to improve workflow, game features, and artistic output.</li>
+            </ul>
+
+            <h5 class="center">Candidate Profile:</h6>
+            <ul>
+              <li>0+ years of experience developing Game.</li>
+              <li>Expert in developing games on mobile platform.</li>
+              <li>Proficiency in coreJava,C/C++ and strong skills in Computer Graphics. Good mathematical/Physics skills are required.</li>
+              <li>Building reliable and efficient code for game projects.</li>
+              <li>Ability to work on fixed deadlines.</li>
+              <li>Ability to work Independently.</li>
+              <li>Highly passionate about Mobile gaming.</li>
+            </ul>
+
+            <h5 class="center">Qualifications: B.Tech/BCA/MCA</h6>
+            <p><b>Salary :</b>Sky is the limit for talent.</p>            
           </div>
         </div>
       </div>
@@ -117,7 +129,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Twenty Kiwi</a>
+       © 2017 <a class="orange-text text-lighten-3" href="http://www.twentykiwi.com">Twenty Kiwi</a>, All right reserved
       </div>
     </div>
   </footer>
